--- a/public/history.css
+++ b/public/history.css
@@ -1,21 +1,26 @@
+*{  margin: 0;
+    padding: 0;
+    font-family:"instrument+sans","Inknut+Antiqua";
+}
+
 /* Body styling */
 body {
-    background: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+    background-color: #07051B;
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
     margin: 0;
-    color: #ffffff;
+    color: #D7DFA3;
 }
 
 /* Navbar styling */
 nav {
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background:linear-gradient(#15A8B8,#0b374d,#07051B);
+    box-shadow:0 0.5px #0E5165;
     padding: 15px 0;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 nav ul {
@@ -27,32 +32,35 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 20px;
+    margin: 10px;
 }
 
 nav ul li a {
-    color: #ffffff;
+    margin-right: 100px;
+    margin-left: 200px;
+    align-items: center;
+    font-size:small ;
+    color: #D7DFA3;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 24px;
     padding: 8px 15px;
     transition: background 0.3s, color 0.3s;
     border-radius: 5px;
 }
 
 nav ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-    color: #000000;
+ color: #9bf5ff;
 }
 
 /* Container styling */
 .container {
-    background: rgba(255, 255, 255, 0.1);
+    background-image: linear-gradient(#15A8B8,#0E5165,#0B3449,#07051B);
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 30px;
     border-radius: 15px;
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 2px #15A8B8;
     margin-top: 40px;
     width: 90%;
     max-width: 800px;
@@ -63,7 +71,7 @@ nav ul li a:hover {
 .container h1 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #00d4ff;
+    color: #07051B;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
@@ -79,7 +87,7 @@ table thead {
 }
 
 table thead th {
-    color: #ffffff;
+    color: #07051B;
     font-weight: bold;
     padding: 15px;
 }
@@ -99,7 +107,7 @@ table tbody tr:hover {
 
 table td {
     padding: 15px;
-    color: #ffffff;
+    color: #D7DFA3;
     text-align: center;
 }
 
